WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198422
WebKitTestRunner sometimes freezes under -[NSWindow release]
https://bugs.webkit.org/show_bug.cgi?id=198422
Summary
WebKitTestRunner sometimes freezes under -[NSWindow release]
Alexey Proskuryakov
Reported
2019-05-31 09:47:10 PDT
rdar://problem/50948871
NSWindow does some interesting things when a window that's being deallocated is still the key window. Our code for key window management that was added for gamepad testing makes it so that the window remains the key one until after dealloc, which results in a deadlock.
Attachments
proposed fix
(2.66 KB, patch)
2019-05-31 09:51 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2019-05-31 09:51:25 PDT
Created
attachment 371065
[details]
proposed fix
WebKit Commit Bot
Comment 2
2019-05-31 11:56:42 PDT
Comment on
attachment 371065
[details]
proposed fix Clearing flags on attachment: 371065 Committed
r245975
: <
https://trac.webkit.org/changeset/245975
>
WebKit Commit Bot
Comment 3
2019-05-31 11:56:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug