Cherry-pick r245975. rdar://problem/52090309

WebKitTestRunner sometimes freezes under -[NSWindow release]
    https://bugs.webkit.org/show_bug.cgi?id=198422

    Reviewed by Tim Horton.

    The window remains key until it's out of the allWindows vector, and AppKit is not
    happy about deallocating key windows. Fixed by updating allWindows in -close
    instead of -release.

    Added isMainFrame assertions in code that manipulates allWindows for a good measure.

    * WebKitTestRunner/mac/WebKitTestRunnerWindow.mm:
    (+[WebKitTestRunnerWindow _WTR_keyWindow]):
    (-[WebKitTestRunnerWindow initWithContentRect:styleMask:backing:defer:]):
    (-[WebKitTestRunnerWindow close]):
    (-[WebKitTestRunnerWindow dealloc]):

    Canonical link: https://commits.webkit.org/212450@main
    git-svn-id: http://svn.webkit.org/repository/webkit/trunk@245975 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.535@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@246782 268f45cc-cd09-0410-ab3c-d52691b4dbfc